--- a/files/面试题.md
+++ b/files/面试题.md
@@ -1,123 +1,107 @@
 
-虚拟机(算法和机制,如何去调优)
-类加载
-Spring相关
-zookeeper选举算法(分布式锁(利用了每个节点的强一制性,默认相信zookeeper每个节点数据是一致的),创建临时文件)
+#虚拟机
+* 算法和机制,如何去调优
+* 类加载
+#Spring相关
+#zookeeper
+* 选举算法
+* 分布式锁(利用了每个节点的强一制性,默认相信zookeeper每个节点数据是一致的),创建临时文件)
   zookeeper管理员指南,
 
-事务一致性如何保证(乐观锁,二阶段提交)
-kafka(结构和原理) 负载均衡和高可用
-1.消息分类按不同类别,分成不同的Topic,Topic又拆分成多个partition,每个partition均衡分散到不同的服务器(提高并发访问的能力)
-2.消费者按顺序从partition中读取,不支持随机读取数据,但可通过改变保存到zookeeper中的offset位置实现从任意位置开始读取
-3.服务器消息定时清除(不管有没有消费)
-4.每个partition还可以设置备份到其他服务器上的个数以保证数据的可用性。通过Leader,Follower方式
-5.zookeeper保存kafka服务器和客户端的所有状态信息.(确保实际的客户端和服务器轻量级)
-6.在kafka中,一个partition中的消息只会被group中的一个consumer消费;每个group中consumer消息消费互相独立;
+## 事务一致性如何保证(乐观锁,二阶段提交)
+# kafka(结构和原理) 负载均衡和高可用
+1. 消息分类按不同类别,分成不同的Topic,Topic又拆分成多个partition,每个partition均衡分散到不同的服务器(提高并发访问的能力)
+2. 消费者按顺序从partition中读取,不支持随机读取数据,但可通过改变保存到zookeeper中的offset位置实现从任意位置开始读取
+3. 服务器消息定时清除(不管有没有消费)
+4. 每个partition还可以设置备份到其他服务器上的个数以保证数据的可用性。通过Leader,Follower方式
+5. zookeeper保存kafka服务器和客户端的所有状态信息.(确保实际的客户端和服务器轻量级)
+6. 在kafka中,一个partition中的消息只会被group中的一个consumer消费;每个group中consumer消息消费互相独立;
   我们可以认为一个group是一个"订阅"者,一个Topic中的每个partions,只会被一个"订阅者"中的一个consumer消费,
   不过一个consumer可以消费多个partitions中的消息
-7.如果所有的consumer都具有相同的group,这种情况和queue模式很像;消息将会在consumers之间负载均衡.
-8.如果所有的consumer都具有不同的group,那这就是"发布-订阅";消息将会广播给所有的消费者.
-9.持久性,当收到的消息时先buffer起来,等到了一定的阀值再写入磁盘文件,减少磁盘IO.在一定程度上依赖OS的文件系统(对文件系统本身优化几乎不可能)
-10.除了磁盘IO,还应考虑网络IO，批量对消息发送和接收,并对消息进行压缩。
-11.在JMS实现中,Topic模型基于push方式,即broker将消息推送给consumer端.
+7. 如果所有的consumer都具有相同的group,这种情况和queue模式很像;消息将会在consumers之间负载均衡.
+8. 如果所有的consumer都具有不同的group,那这就是"发布-订阅";消息将会广播给所有的消费者.
+9. 持久性,当收到的消息时先buffer起来,等到了一定的阀值再写入磁盘文件,减少磁盘IO.在一定程度上依赖OS的文件系统(对文件系统本身优化几乎不可能)
+10. 除了磁盘IO,还应考虑网络IO，批量对消息发送和接收,并对消息进行压缩。
+11. 在JMS实现中,Topic模型基于push方式,即broker将消息推送给consumer端.
    不过在kafka中,采用了pull方式,即consumer在和broker建立连接之后,主动去pull(或者说fetch)消息;
    这中模式有些优点,首先consumer端可以根据自己的消费能力适时的去fetch消息并处理,且可以控制消息消费的进度(offset);
    此外,消费者可以良好的控制消息消费的数量,batch fetch.
-12.kafka无需记录消息是否接收成功,是否要重新发送等,所以kafka的producer是非常轻量级的,consumer端也只需要将fetch后的
+12. kafka无需记录消息是否接收成功,是否要重新发送等,所以kafka的producer是非常轻量级的,consumer端也只需要将fetch后的
    offset位置注册到zookeeper,所以也是非常轻量级的.
 
 
-kafka使用场景
-对于一些常规的消息系统,kafka是个不错的选择;partitons/replication和容错,可以使kafka具有良好的扩展性和性能优势.
-不过到目前为止,我们应该很清楚认识到,kafka并没有提供JMS中的"事务性""消息传输担保(消息确认机制)""消息分组"等企业级特性;
-kafka只能使用作为"常规"的消息系统,在一定程度上,尚未确保消息的发送与接收绝对可靠(比如,消息重发,消息发送丢失等)
-
-kafka的特性决定它非常适合作为"日志收集中心";application可以将操作日志"批量""异步"的发送到kafka集群中,
-而不是保存在本地或者DB中;kafka可以批量提交消息/压缩消息等,这对producer端而言,几乎感觉不到性能的开支.consumer端
-采用批量fetch方式,此时consumer端也可以使hadoop等其他系统化的存储和分析系统
 
 
 
+## 负载均衡和高可用
+## Socket网络通信、NIO流以及多线程处理技术，熟悉Netty、了解Mina
+## 多线程 
+## HashMap
+## concurrenthashmap(查询需不需要锁)
 
-程序优化: 
-    能用异步的尽量采用异步方式处理.
-    能批量处理的尽量进行批量处理.
-
-
-
-负载均衡和高可用
-Socket网络通信、NIO流以及多线程处理技术，熟悉Netty、了解Mina
-多线程 
-HashMap
-concurrenthashmap(查询需不需要锁)
-数据库优化
-java编绎语法糖
-oracle数据结构,段,区等.
-Dubbo与Hessian区别原理
-JDK1.5与1.6,1.7区别
-1.memcache与redis,缓存服务器一般缓存哪些数据(命中率问题)
-2.一致性hash,treeMap
-3.ibatis与hibernate及mybatis的比较（摘录整理）
-4.多线程与分步式锁,程序数据库中死锁机制及解决方案
-5.jvm性能优化  (http://www.iteye.com/topic/1119491  了解CMS)
+1. memcache与redis,缓存服务器一般缓存哪些数据(命中率问题)
+2. 一致性hash,treeMap
+3. ibatis与hibernate及mybatis的比较（摘录整理）
+4. 多线程与分步式锁,程序数据库中死锁机制及解决方案
+5. jvm性能优化  (http://www.iteye.com/topic/1119491  了解CMS)
   http://www.cnblogs.com/caca/p/jvm_gc_algorithm_heap_space.html(垃圾收集算法)
-6.加密解密
-7.微信图片处理
-17.微信token
-8.spring单例,为什么没有安全问题
-9.ThreadLocal
-10.重写equals原则  —－重写eqauls必须重写 hashcode
-11.线程池原理
-12.memecache内存分配机制
+6. 加密解密
+7. 微信图片处理
+17. 微信token
+8. spring单例,为什么没有安全问题
+9. ThreadLocal
+10. 重写equals原则  —－重写eqauls必须重写 hashcode
+11. 线程池原理
+12. memecache内存分配机制
    chunk 10,20,30
-13.hashMap CPU100%
-14.LVS章文嵩
-15.NIO,及内存泄露
-16.shiro
-18.处理hash冲突
-19.jvm有没有内存泄露
-20.volatile...conccurrent无锁实现
-21.String底层原理
-22.Http请求头信息
-23.lamda表达式
-24.mybatis批量插入,游标问题
-25.JSON与XML区别
-26.java中强引用,软引用,弱引用,虚引用
-27.Filter过滤器责任链模式,过滤器拦截器区别?
-28.项目中有没有遇到什么难解决的问题
+13. hashMap CPU100%
+14. LVS章文嵩
+15. NIO,及内存泄露
+16. shiro
+18. 处理hash冲突
+19. jvm有没有内存泄露
+20. volatile...conccurrent无锁实现
+21. String底层原理
+22. Http请求头信息
+23. lamda表达式
+24. mybatis批量插入,游标问题
+25. JSON与XML区别
+26. java中强引用,软引用,弱引用,虚引用
+27. Filter过滤器责任链模式,过滤器拦截器区别?
+28. 项目中有没有遇到什么难解决的问题
    jasper模板文件新老对象同时存在,导致堆内存内存泄露的问题
    深入分析 Java Web技术内幕 第8章MAT工具mina框架direct memory内存泄露
-29.tomcat实现原理,观察者模式
-30.NIO观察者模式
-31.java5 线程池框架
-32.List与set区别,底层实现原理  list底层时数组，set底层时HashMap
-33.redis flashdb 清空数据  
-34.memecached flash_all 清空数据
-35.logstash 
-36.redis做队列比较合适,支持数据类型多,而且可持久化
-37.list,set,vector底层实现原理
-38.SpringMVC与Struts2工作原理
-39.aqs实现
-40.读写锁 公平非公平实现   reentrantWriteReadLock 公平锁，通过队列实现，
-41.多线程获取执行结果汇总
-42.hashmap 多线程操作
-43.jvm 堆
-44.数据库优化(Nginx性能调优QQ邮箱)
-45.concurrenthashmap实现,不够时自增,hash冲突解决? 
-46.Spring加载次序Classloader
-47.substring内存溢出Arrays.copeof()
-48.Restful
-49.Leader选举算法
-50.Nio,mima或netty
-51.高可用,高并发,高性能
-52.深入分析javaWeb技术内幕项目问题处理
-53.Linux磁盘空间不足监控
-54.框架的优缺点Spring,Struts2等...
-55.自定义类加载器
-56.String.subString()导到内存溢出的情况
-57.缓存命中率问题
-58.java锁多个对象
-59.访问者模式
+29. tomcat实现原理,观察者模式
+30. NIO观察者模式
+31. java5 线程池框架
+32. List与set区别,底层实现原理  list底层时数组，set底层时HashMap
+33. redis flashdb 清空数据  
+34. memecached flash_all 清空数据
+35. logstash 
+36. redis做队列比较合适,支持数据类型多,而且可持久化
+37. list,set,vector底层实现原理
+38. SpringMVC与Struts2工作原理
+39. aqs实现
+40. 读写锁 公平非公平实现   reentrantWriteReadLock 公平锁，通过队列实现，
+41. 多线程获取执行结果汇总
+42. hashmap 多线程操作
+43. jvm 堆
+44. 数据库优化(Nginx性能调优QQ邮箱)
+45. concurrenthashmap实现,不够时自增,hash冲突解决? 
+46. Spring加载次序Classloader
+47. substring内存溢出Arrays.copeof()
+48. Restful
+49. Leader选举算法
+50. Nio,mima或netty
+51. 高可用,高并发,高性能
+52. 深入分析javaWeb技术内幕项目问题处理
+53. Linux磁盘空间不足监控
+54. 框架的优缺点Spring,Struts2等...
+55. 自定义类加载器
+56. String.subString()导到内存溢出的情况
+57. 缓存命中率问题
+58. java锁多个对象
+59. 访问者模式
 
 
 
