misc:Mysql lock

--- a/files/多线程.md
+++ b/files/多线程.md
@@ -34,3 +34,23 @@
 缓存一致性协议有多种，但是日常处理的大多数计算机设备都属于”嗅探（snooping）”协议，它的基本思想是：
 所有内存的传输都发生在一条共享的总线上，而所有的处理器都能看到这条总线：缓存本身是独立的，但是内存是共享资源，所有的内存访问都要经过仲裁（同一个指令周期中，只有一个CPU缓存可以读写内存）。
 CPU缓存不仅仅在做内存传输的时候才与总线打交道，而是不停在嗅探总线上发生的数据交换，跟踪其他缓存在做什么。所以当一个缓存代表它所属的处理器去读写内存时，其它处理器都会得到通知，它们以此来使自己的缓存保持同步。只要某个处理器一写内存，其它处理器马上知道这块内存在它们的缓存段中已失效。
+
+
+#乐观锁与悲观锁
+## 悲观锁
+悲观锁总是假设最坏的情况，每次去拿数据的时候都会认为别人会修改，所有每次在拿数据的时候会上锁，这样别人
+想拿这个数据就会阻塞直到它拿到这个锁。
+## 乐观锁
+乐观锁总是假设最好情况，每次去拿数据的时候都认为别人不会修改，所以不会上锁；但是在更新的时候会判断一下在此期间
+别人有没有去更新这个数据，可以使用版本号机制和CAS算法。
+
+
+#CAS
+##ABA问题
+ 如果一个变量V初次读取的值为A，并且在准备赋值的时候检查它容然为A，那么我们就可以认为它没有其他线程修改过吗？
+ 很显然不可以，因为在这个期间可能被其他线程从A修改为B，又从B修改为A；那么CAS操作误认为没有修改过。这个问题被
+ 称为CAS的ABA问题
+### 如何解决ABA问题
+ JDK1.5以后AtomicStampedReference类就提供了这种能力，其中compareAndSet方法就是首先检查当前引用是否等于
+ 预期引用，并且当前标志是否等于预期标志，如果全部相等则以原子的方式更新
+  
