--- a/files/面试题.md
+++ b/files/面试题.md
@@ -269,3 +269,91 @@ mongodb应用场景,及使用过程中有没有遇到什么问题
 
 AQSjava并发包
 http://images.blogjava.net/blogjava_net/xylz/Windows-Live-Writer/-Java-Concurrency-1--J.U.C_9314/J.U.C_2.png
+
+
++ sleep和wait占用cpu时间片吗
++ rabbitmq结构、rocketmq结构
+
+
++ Jvm的内存模型
++ Gc算法 gc算法的选择条件
+
+
++ hashmap 扩容 1.7的hashmap跟1.8的区别
++ Hashmap 为什么是线程不安全
++ synchronies 和 lock 的区别
++ Spring bean 单例 如何保证线程安全
++ Redis实现一个定长数组
+
++ Spring cloud。dubbo 区别
+
++ stop the world原理
+  
++ 数据库连接池原理
+
++ Spring 事务类型
+
++ redis es mq 集群架构
+
++ nio
+
++ 分布式事务
+
+多态
+
++ 限流算法
+
++ netty原理
+
+
+Java8 jvm改造 
+Java9 模块化
+
++ 动态代理
+
++ Spring事务 传递？
+
+tcp连接 udp连接
+
++ zk选举算法
+
++ atomicinteger  cas原理
+
++ 线程池隔离机制、信号量隔离机制
+
++ 如何实现你用过的框架
+
+
++ dubbo线程模型
+
+
+
+1. 集合  set  list  hashmap  队列以及对应的线程安全集合（copyonwriteArraylist   concurrenthashmap等） 
+	理解各个集合的特点以及区别，了解源码   解决hash冲突   为什么重写equals要重写hashcode方法
+2. 线程   实现线程的几种方式（thread  runnable  callable）  线程同步 通信 线程锁（synchronized Lock） countdownlatch cyclicbarrier   semaphore volatile等关键字的用法
+	生产者消费者模型   wait/notify   condition.await/singal      sleep和wait的区别      (常问怎么让两个线程执行完了再继续执行（countdownlatch cyclicbarrier）)
+	threadLocal 
+3. IO  字符流 字节流   阻塞/非阻塞   同步/异步 NIO原理
+4. 网络编程（笔试常考 面试几乎不会问到）  三次握手/四次挥手  
+5. JVM  内存模型  GC算法  新生代老年代具体使用哪种算法   各种内存溢出以及每种异常的解决方法   具体项目中遇到哪些内存溢出问题  以及JVM调优等 fullGC触发条件 类加载机制 双亲委派机制
+6. SpringMVC原理
+7. HTTP协议  get/post/put  http缓存
+8. JSP Servlet区别   Servlet生命周期 Servlet是否线程安全  为什么不安全 如果不安全怎么才能安全  
+9. Mybatis/hibernate   二级缓存  mybatis sql中传参# $的区别 hibernate中对象的几种状态
+10. Spring   IOC和AOP原理  事务隔离级别 事务传播方式
+11.  说说常用的设计模式
+12. 常用数据库  数据库设计原则 sql优化方式有哪些  索引 锁  常考统计查询sql（笔试）    1亿条数据查询9000 0000 开始后面的10条数据的sql（limit优化）
+	分库分表 乐观锁悲观锁 mysql各个引擎的特点
+13.  缓存 如redis memcache对比    redis数据类型  主从  持久化   主从之间怎么保持数据一致
+14. 集群分布式消息中间件  分布式数据一致性   mysql主从怎么保持数据一致   负载均衡算法  微服务  各个服务之间通信框架（如dubbo）
+	 接口通信安全 分布式环境下session管理方式 	nginx负载均衡算法
+15. 高并发量、大数据量的解决方式
+16. 常用算法   字符串相关  查找（二分查找） 排序（冒泡、快排）  
+17. 静态变量内存位置，equals重写要额外注意什么，string和integer常量池，spring中bean初始化，一致性哈希
+18. activemq、C3p0
+19. 数据库优化、数据库事务的几个特性、redo undo日志、kafka基本原理、如何实现的水平扩展，JAVA设计模式（责任链、依赖倒置原则）、大数据TOP N算法，JAVA classloader委托机制以及热部署的实现原理
+20.  netty原理，幂等性设计，并发编程，系统的设计，问题和改进
+21. 问了一些比如他们会遇到的和第三方、银行交互的问题，抛出问题，看如果你碰到会怎么解决
+22. 多线程方面，一些异常和spring的InitializingBean，spring考察的有bean的初始化
+23. 线程池创建
+24. Hashmap原理
